--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,22 @@ body
     font-family: "Arial";
     font-size: 16px;
 }
+
+#cabecera
+{
+    background: #33a;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline
+{
+    margin: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8cm;
+}
+
 #container
 {
     width: 70%;
